--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -193,7 +193,7 @@ margin-top: 5px;
 }
 
 .containerListings {
-    background-color: #edefed;
+    /*background-color: #edefed;*/
 }
 
 .modal-dialog {
