--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -41,13 +41,13 @@
     <!-- Header -->
     <div class = "mainContainer">
     <div id="myCarousel" class="carousel" data-ride="carousel">
-      <div class="carousel-inner" role="listbox">
+      <div class="carousel-inner carouselMain" role="listbox">
         <div class="item active">
           <img src="/resources/upenn.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>classify <strong>Penn</strong></h1>
-              <p>The best way to buy and sell things, find housing, engage with and find jobs in the your college community.</p>
+              <p>Buy, sell, find housing and jobs, and engage in the your college community.</p>
               {{#unless currentUser}}
               <p><a class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal">Sign up today</a></p>
               {{/unless}}
@@ -59,7 +59,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>classify <strong>Penn</strong></h1>
-              <p>The best way to buy and sell things, find housing, engage with and find jobs in the your college community.</p>
+              <p>Buy, sell, find housing and jobs, and engage in the your college community.</p>
               {{#unless currentUser}}
               <p><a class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal">Sign up today</a></p>
               {{/unless}}
@@ -71,7 +71,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>classify <strong>Penn</strong></h1>
-              <p>The best way to buy and sell things, find housing, engage with and find jobs in the your college community.</p>
+              <p>Buy, sell, find housing and jobs, and engage in the your college community.</p>
               {{#unless currentUser}}
               <p><a class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal">Sign up today</a></p>
               {{/unless}}
