--- a/client/views/home/listings/listingsList.html
+++ b/client/views/home/listings/listingsList.html
@@ -1,5 +1,5 @@
 <template name ="listingsList" class = "listings">
-
+<section id="listings">
 		<!-- Listings Section -->
         <div class="containerListings">
             <div class="row">
@@ -58,5 +58,6 @@
                 </div>
             </div>
         </div>
+    </section>
     
 </template>
