--- a/client/views/listings/postSubmit/postContinue.html
+++ b/client/views/listings/postSubmit/postContinue.html
@@ -53,15 +53,7 @@
             </div>
 
             <!-- Blog Sidebar Widgets Column -->
-            <div class="col-md-4">
-
-                <!-- Blog Search Well -->
-                
-
-                <!-- Blog Categories Well -->
-              
-
-            </div>
+      
 
         </div>
         <!-- /.row -->
@@ -69,14 +61,10 @@
 
         <!-- Footer -->
         
-
-    </div>
-<div class="container">
-  <div class="row">
    
    
       <!--right-->
-      <div class="col-md-9">
+      
         
         <p>
   
@@ -84,8 +72,8 @@
           {{> gallery }}
         </p>
   
-        </div><!--/right-->
-    </div><!--/row-->
+        <!--/right-->
+
 </div><!--/container-->
 </template>
 
