--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -1,6 +1,5 @@
 <template name="listingPage">
-
-
+{{> topBarListingPage}}
  <div class="container">
   <div class="row">
     <div class = "titlePost">
