--- a/client/views/listings/listingPage/postsList.html
+++ b/client/views/listings/listingPage/postsList.html
@@ -6,7 +6,7 @@
       <h3><a href="{{pathFor 'postPage'}}">{{title}}</a></h3>
       {{#if ownPost}} Edit Post {{/if}}
     </div>
-    {{#each dataEntries}}
+    {{#each dataEntries1}}
     <div class="col-sm-6 col-lg-2">
       <div class="thumbnail">
         {{#if isImage}}
