--- a/client/views/listings/postPage/postPage.html
+++ b/client/views/listings/postPage/postPage.html
@@ -29,11 +29,11 @@
 <div class="row">
     <div class="col-md-12" id="slider">
         <div class="col-md-12" id="carousel-bounding-box">
-            <div id="myCarousel" class="carousel slide">
+            <div id="myCarousel" class="carousel slide carouselPost">
                 <!-- main slider carousel items -->
                 <div class="carousel-inner carousel-postPage">
                     {{ #each dataEntries }}
-                    <div class="active item" data-slide-number="0">
+                    <div class="active item itemPost" data-slide-number="0">
                         <img src="{{link}}" class="img-responsive">
                     </div>
                     {{ /each }}
@@ -147,7 +147,7 @@
         </div>
         <!-- /.row -->
 
-        <hr>
+       
 
         <!-- Footer -->
         
