--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,7 +1,10 @@
-<template name = "home">
+<body>
+<!-- we render the modals in body so Bootstrap knows where to find them when they are dismissed. -->
 {{>modal}}
 {{>leaderboard}}
+</body>
 
+<template name = "home">
 
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
@@ -10,7 +13,7 @@
             <div class="navbar-header page-scroll">
 
                 <a class="logo page-scroll" href="/">logo</a>
-                <a class="fa fa-search search" style="margin-left: 15px" data-toggle="modal" data-target="#myModalSearching" id="loadSearch"> search</a>
+                <a class="fa fa-search search" style="margin-left: 15px" data-target="#myModalSearching" data-toggle="modal" id="loadSearch"> search</a>
 
             </div>
               {{> errors}}
@@ -103,7 +106,6 @@
 
 
 <template name ="modal">
-  <!-- Modal (modal is being rendered in 'home' template)-->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">                                             
       <div class="modal-content">                                          
