--- a/client/stylesheets/styleSearch.css
+++ b/client/stylesheets/styleSearch.css
@@ -1,3 +1,9 @@
+	#loadSearch{
+		margin-left: 15px;
+		color: white;
+		font-size: 1.2em;
+	}
+
 	#customModal {
 		font-family: sans-serif,"Helvetica Neue",Helvetica;
 		max-width: 100%;
@@ -54,7 +60,7 @@
 	.searchTopMargin {
 		text-align: center;
 		display: -webkit-inline-box;
-		margin-top: 15px;
+		margin-top: 12px;
 	}
 
 	.centerSearchContainer{
@@ -110,7 +116,6 @@
 	  /* For modern browsers */
 	  /* For IE 6/7 (trigger hasLayout) */
 	  *zoom: 1;
-	  margin-left: 15px;
 	  margin-right: 15px;
 	  opacity: .9;
 	  }
@@ -162,7 +167,7 @@
 	/*  COLUMN SETUP  */
 	.col {
 		display: block;
-		float:right;
+		float: left;
 	}
 	.col:first-child { margin-left: 0; }
 
@@ -228,16 +233,72 @@
 	}
 
 	.searchContent {
-		display: -webkit-box;
+		display: flex;
 		overflow-x: auto;
 		margin-right: 8px;
 	}
 
 	.searchDescription{
-		margin-left: 10px;
-		font-size: 18px;
-		margin-top: 23px;
+	   margin-left: 8px;
+       font-size: 18px;
+       margin-top: 18px;
 	}
 	.searchTitle{
 		letter-spacing: 1px;
+		margin-top: 15px;
 	}
+
+    .iconSearch{
+        margin-top: 14px;
+        margin-right: 9px;
+    }
+
+    .postContent{
+    	display: -webkit-inline-box;
+    }
+
+@-moz-document url-prefix() {
+    .date {
+        padding: 16px 0 0 0;
+    }
+    .date p span {
+    	padding: 9px 0 3px 0;
+    }
+}
+
+    .date p span {
+	background: rgb(26,41,119); 
+	background: linear-gradient(top, rgb(26,41,119) 0%, rgb(173, 175, 194) 100%);
+	background: -moz-linear-gradient(top, rgb(26,41,119) 0%, rgb(173, 175, 194) 100%);
+	background: -webkit-linear-gradient(top, rgb(26,41,119) 0%, rgb(173, 175, 194) 100%);
+	font-size: 18px; font-weight: bold; color: #fff; text-transform: uppercase; 	
+	display: block;
+	border-radius: 0 0 2px 2px;
+	-moz-border-radius: 0 0 2px 2px;
+	-webkit-border-radius: 0 0 2px 2px;
+	padding: 2px 2px 2px 2px;
+}
+.date p {
+	font-family: Helvetica, sans-serif; 
+	font-size: 20px; text-align: center; color: #9e9e9e; 
+	line-height: 1.2;
+}
+
+.date {
+	display: inline-table;
+	width: 35px; 
+	/*height: 160px; */
+	margin-right: 7px;
+	background: #fcfcfc; 
+	background: linear-gradient(top, #fcfcfc 0%,#dad8d8 100%); 
+	background: -moz-linear-gradient(top, #fcfcfc 0%, #dad8d8 100%); 
+	background: -webkit-linear-gradient(top, #fcfcfc 0%,#dad8d8 100%); 
+	border: 1px solid #d2d2d2;
+	border-radius: 2px;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+	-moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+}
+
