--- a/client/views/application/searching.html
+++ b/client/views/application/searching.html
@@ -32,8 +32,8 @@
     <div class="section group">
      {{#if inputIsNotEmpty}}
      {{#esEach index="postsSearch" id="search" options=esOptions}}
-     <div class="col span_1_of_2">
-      <div class="searchSpacing">{{> player}}</div>
+     <div class="col span_1_of_2"> 
+      <div class="searchSpacing"><div>{{> player}}</div> </div>
     </div>
     {{/esEach}}
 
@@ -50,24 +50,34 @@
 
 
 <template name="player">
+<div class="postContent">
+<div class="date">
+        <p style="margin: 0px">{{day}} <span> {{month}} </span></p>
+</div>
+
   <div class="postsSearch">
-  <div class="searchContent">
-
-{{#if forSaleC}}
-  <i class="fa fa-shopping-cart"></i>
-{{/if}}
-  {{#if housingC}}
-    <i class="fa fa-home"></i>
-  {{/if}}
-     {{#if communityC}}
-     <i class="fa fa-users"></i>
-     {{/if}}
-     {{#if jobsC}}
-     <i class="fa fa-briefcase"></i>
-     {{/if}}
-
-  <h3 class="searchTitle"><a href="{{pathFor 'postPage'}}" data-dismiss="modal">{{title}}</a></h3>
-  <div class="searchDescription">{{description}}</div>
+    <div class="searchContent">
+    <div>
+      <div class="iconSearch">
+        {{#if forSaleC}}
+        <i class="fa fa-shopping-cart" style="font-size: 2.5em"></i>
+        {{else}}
+        {{#if housingC}}
+        <i class="fa fa-home" style="font-size: 2.5em"></i>
+        {{else}}
+        {{#if communityC}}
+        <i class="fa fa-2x fa-users" style="font-size: 2.5em"></i>
+        {{else}}
+        <i class="fa fa-2x fa-briefcase" style="font-size: 2.5em"></i>
+        {{/if}}
+        {{/if}}
+        {{/if}}  
+      </div>
+      </div>
+      <h3 class="searchTitle"><a href="{{pathFor 'postPage'}}" data-dismiss="modal">{{title}}</a></h3>
+      <div class="searchDescription">{{description}}</div>
+    
+    </div>
   </div>
   </div>
 </template>
