--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -13,7 +13,7 @@
             <div class="navbar-header page-scroll">
 
                 <a class="logo page-scroll" href="/">logo</a>
-                <a class="fa fa-search search" style="margin-left: 15px" data-target="#myModalSearching" data-toggle="modal" id="loadSearch"> search</a>
+                <a class="fa fa-search search" data-target="#myModalSearching" data-toggle="modal" id="loadSearch"> search</a>
 
             </div>
               {{> errors}}
