--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,15 +1,17 @@
 /* POST PAGE */
-
-/*img-thumbnail {
+.img-thumbnail {
     border: none;
+    max-height: 150px;
+
 }
-.thumbnail {
-    border: none;
+.divTextPost {
+    padding-top: 0px;
+}
 
-}*/
-/*.postTitle {
-    text-align: center;
-}*/
+
+.thumbnail {
+    max-height: 150px;
+}
 
 @media (min-width: 998px) {
 .col-lg-8 {
@@ -53,6 +55,7 @@ max-width: 100%;
 height: inherit;
 margin-left: auto;
 margin-right: auto;
+max-height: 150px;
 }
 /*.carouselMain {
 display: block;
@@ -396,7 +399,7 @@ margin-top: 5px;
     display: grid;
     margin-top: 30px;
     font-size: 20px;
-    min-width: 770px;
+    min-width: 600px;
 }
 
 .inputPost {
@@ -1452,7 +1455,9 @@ border-color: #eed3d7;
   /* For IE 6/7 (trigger hasLayout) */
   *zoom: 1;
   position: relative;
-  opacity: 1; }
+  opacity: 1;
+  box-shadow: none;
+   }
   .post:before, .post:after {
     content: "";
     display: table; }
