--- a/client/views/application/searching.html
+++ b/client/views/application/searching.html
@@ -4,8 +4,8 @@
   <div class="modal fade" id="myModalSearching" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
     <div class="modal-dialog" id="customModal">     
-      <div>      
-        <div class="modal-header">
+            
+        <!-- <div class="modal-header"> -->
           <div class="closingSearchAlign">
            <div class="closingSearch">
             <a href="#" data-dismiss="modal">X <span class="esc">[esc]</span></a> 
@@ -26,8 +26,8 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
+      <!-- </div> -->
+    
 
     <div class="section group">
      {{#if inputIsNotEmpty}}
