--- a/client/stylesheets/styleSearch.css
+++ b/client/stylesheets/styleSearch.css
@@ -52,7 +52,7 @@
 	}
 
 	.esc {
-		margin-left: -7px;
+		margin-left: -4px;
 		font-size: 16px;
 		position: fixed;
 	}
@@ -85,6 +85,8 @@
 		margin-left: 5px;
 		padding: 0px;
 	    padding-left: 4px;
+	    padding-top: 3px;
+	    padding-bottom: 3px;
 		background-color: white;
         z-index: 10;
 	    -webkit-border-radius: 2px;
