--- a/client/views/listings/listingPage/postsList.html
+++ b/client/views/listings/listingPage/postsList.html
@@ -23,7 +23,7 @@
 
       <h3><a href="{{pathFor 'postPage'}}">{{title}}</a></h3>
       {{description}} <br>
-      {{#if ownPost}} Edit Post {{/if}}
+      {{#if ownPost}} <a href="{{pathFor 'postEdit'}}"> Edit Post</a> {{/if}}
     </div>
     {{#each dataEntries1}}
     
